content/assets/stylesheets/sass/styles.sass
@import "compass/typography/vertical_rhythm"

@import bootstrap/bootstrap

@import partials/config/grid
@import partials/mixins/grid
@import partials/widgets/grid

$grid-background-baseline-height: 1.375em

h1, h2, h3, h4, h5
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif !important

pre
  font-size: 13px

